--- a/_posts/2018-08-30-makerss.md
+++ b/_posts/2018-08-30-makerss.md
@@ -2,6 +2,7 @@
 title: "토렌트 사이트에서 RSS feed 생성"
 date: 2018-08-30 08:26:28 -0900
 categories: video
+tag: rss
 ---
 
 전 Gsuite를 사용하고 있어서 요즘 부담 없이 파일을 받고 있습니다. 받고자 하는 사이트들을 RSS로 만들어서 사용하고 있는데, 몇 개 작업하다 보니 대게 비슷하여 이걸 일반화 시켜보았습니다.
