--- a/_posts/2018-10-18-티프리카용 RSS.md
+++ b/_posts/2018-10-18-티프리카용 RSS.md
@@ -6,34 +6,47 @@ categories: rss
 
 ## 티프리카용 RSS 피드 생성 - php 버전
 고기상자님 코드를 바탕으로 자막 파일만 받는 것만 했었다.
-영화만 이 파일로 받고, 영화 이외에는 다른 분들이 업데이트해주시는 것으로 사용했으나
-사이트가 자꾸 변경되어 여러 개를 같이 고쳐야 하기에 이 파일로 티프리카 모두 적용하는 것으로 변경한다.
+영화만 이 파일로 받고, 영화 이외에는 다른 분들이 업데이트해주시는 것으로 사용했으나 사이트가 자꾸 변경되어 여러 개를 같이 고쳐야 하기에 이 파일로 티프리카 모두 적용하는 것으로 변경한다.
+다운로드 : https://soju6jan.github.io/etc/sj_tf.php
 
 ## 사용법
+### 1. 단일파일
 #### 티프리카 파라미터
-	티프리카를 브라우저로 열어서 주소창에 있는 b_id와 sc 또는 ca 값을 그대로 사용한다. mode=list, x, y 생략
-	- b_id : 게시판 이름
-	- sc : 검색어
-	- ca : 카테고리
+  티프리카를 브라우저로 열어서 주소창에 있는 b_id와 sc 또는 ca 값을 그대로 사용한다. mode=list, x, y 생략
+  - b_id : 게시판 이름
+  - sc : 검색어
+  - ca : 카테고리
 
 #### 전용 파라미터
 - sj_page	값 : 숫자	생략시 : 1
 	탐색할 최대 페이지 값. 1이면 첫 페이지만, 이외는 지정된 페이지까지.
 
+#### 사용예
+  - 드라마 720-next 검색시
+    - 브라우저 주소창 : http://www.tfreeca22.com/board.php?b_id=tdrama&mode=list&sc=720p-next&x=40&y=22
+    - http://자신의서버주소/sj_tf.php?b_id=tdrama&sc=720p-next
+
+  - 드라마 미드 탐색시 주소창
+    - 브라우저 주소창 : http://www.tfreeca22.com/board.php?mode=list&b_id=tdrama&ca=미드
+    - http://자신의서버주소/sj_tf.php?b_id=tdrama&sc=720p-next
+
+### 2. 전체파일 (자막)
+#### 전용 파라미터
 - sj_all	값 : off / on / dummy	생략시 off
-	off이면 하나의 파일만, on이면 게시물에 있는 모든 파일을 받는다.
+
+  off이면 하나의 파일만, on이면 게시물에 있는 모든 파일을 받는다.
 	영화나 애니에서 자막파일까지 받을 때 사용한다.
 	on이면 파일 개수만큼 링크를 만들어야 하기에 오래 걸린다.
 
 * sj_all=on 일때
 	- sj_all_movie_only_1080p : on / off	생략시 off
+
 	내가 필요해서 만들었다. 영화 탐색 시 1080p, 720p 토렌트 파일이 모두 존재할 때 720p 파일을 목록에서 제외한다.
 
 	- sj_all_max : 생략시 전체
-	티프리카는 한페이지에 35개의 목록이 있다. 자막을 받기 위해 리스트를 생성하려면,
-	매 게시물마다 request를 보내서 토렌트와 자막을 리스트화한다.
-	브라우저에 실행하면 2~3분 정도 걸리며 모두 갱신되나, synology download station 에서는 timeout이 발생한다.
-	즉 한 페이지 모두를 생성하는데 걸리는 시간을 기다리지 못하여 에러가 발생한다. 이를 막고자 이 값을 주면 주어진 값 게시물만 리스트화한다.
+
+	티프리카는 한페이지에 35개의 목록이 있다. 자막을 받기 위해 리스트를 생성하려면, 매 게시물마다 request를 보내서 토렌트와 자막을 리스트화한다.
+	브라우저에 실행하면 2~3분 정도 걸리며 모두 갱신되나, synology download station 에서는 timeout이 발생한다. 즉 한 페이지 모두를 생성하는데 걸리는 시간을 기다리지 못하여 에러가 발생하는데 이를 막고자 이 값을 주면 주어진 값 게시물만 리스트화한다.
 	예) sj_all_max=20 일 경우 최근 게시물중 20개만 리턴
 	갱신이 안 되는 것 같을 때 이 값을 변경.
 
@@ -48,25 +61,20 @@ categories: rss
 
 
 #### 사용예
-- 드라마 720-next 검색시
- - 브라우저 주소창 : http://www.tfreeca22.com/board.php?b_id=tdrama&mode=list&sc=720p-next&x=40&y=22
- - http://자신의서버주소/sj_tf.php?b_id=tdrama&sc=720p-next
-
-- 드라마 미드 탐색시 주소창
- - 브라우저 주소창 : http://www.tfreeca22.com/board.php?mode=list&b_id=tdrama&ca=미드
- - http://자신의서버주소/sj_tf.php?b_id=tdrama&sc=720p-next
 
 - 영화 액션 카테고리 자막까지 받기
- - 브라우저 주소창 : http://www.tfreeca22.com/board.php?mode=list&b_id=tmovie&ca=액션
- - http://자신의서버주소/sj_tf.php?b_id=tdrama&ca=액션&sj_all=on
+  - 브라우저 주소창 : http://www.tfreeca22.com/board.php?mode=list&b_id=tmovie&ca=액션
+  - http://자신의서버주소/sj_tf.php?b_id=tdrama&ca=액션&sj_all=on
 
 - 영화 자막까지
  - http://자신의서버주소/sj_tf.php?b_id=tmovie&sj_all=on&sj_all_movie_only_1080p=on
  - http://자신의서버주소/sj_tf.php?b_id=tmovie&sj_all=on&sj_all_movie_only_1080p=on&sj_all_max=20
  - http://자신의서버주소/sj_tf.php?b_id=tmovie&sj_all=dummy
 
-#### 코드
+## 코드
 ````php
+<?php
+$SITE = 'http://www.tfreeca22.com';
 $m = $_GET["sj_mode"];
 if ( $m == 'd' ) {
 	download();
@@ -77,13 +85,15 @@ if ( $m == 'd' ) {
 			$query = $query.'&'.$key.'='.$value;
 		}
 	}
-	$url = 'http://www.tfreeca22.com/board.php?mode=list'.$query;
+	global $SITE;
+	$url = $SITE.'/board.php?mode=list'.$query;
 	$xml = make_rss($url);
 	$txt=str_replace("&","&amp;",$xml);
 	echo $txt;
 }
 
 function make_rss($url){
+	global $SITE;
 	header("Content-Type: text/html");
 	$ret = "<rss xmlns:showrss=\"http://showrss.info/\" version=\"2.0\"><channel><title></title><link></link><description></description>";
 	$headers = array();
@@ -104,7 +114,7 @@ function make_rss($url){
 				$title = explode(" <",explode("class=\"\"> ",$data[$i])[1])[0];
 			$view = explode("\"",explode("<a href=\"board.php?mode=view&",$data[$i])[1])[0];
 			if ( $_GET["sj_all"] == 'on') {
-				$url = 'http://www.tfreeca22.com/board.php?mode=view&'.$view;
+				$url = $SITE.'/board.php?mode=view&'.$view;
 				$data2 = get_html($url, $headers);
 				$attachs = explode("http://www.filetender.com", $data2);
 
@@ -139,12 +149,14 @@ function make_rss($url){
 				$ret = $ret."<item><title>".$title."</title><link>http://".$_SERVER['HTTP_HOST'].$_SERVER['PHP_SELF']."?" . $view . "&sj_mode=d"."</link><description></description><showrss:showid></showrss:showid><showrss:showname>".$title."</showrss:showname></item>";
 			}
 		}
+		if ($sj_all_max !=-1 && $count > $sj_all_max) break;
 	}
 	$ret = $ret."</channel></rss>";
 	return $ret;
 }
 
 function download() {
+	global $SITE;
 	$b_id = $_GET["b_id"];
 	$id = $_GET["id"];
 	if ( $_GET["sj_filename"] == '') {
@@ -161,7 +173,7 @@ function download() {
 	header("expires: 0");
 	header("Content-Disposition: attachment; filename=\"".$sj_filename."\"");
 	header("content-description: php generated data");
-	$url = 'http://www.tfreeca22.com/board.php?mode=view&b_id=' . $b_id . '&id=' . $id;
+	$url = $SITE.'/board.php?mode=view&b_id=' . $b_id . '&id=' . $id;
 	$url2 = "http://www.filetender.com".$sj_filetender;
 	$headers = array(
 		'Referer: '.$url,
@@ -181,11 +193,12 @@ function download() {
 }
 
 function get_torrent() {
+	global $SITE;
 	$b_id = $_GET["b_id"];
 	$id = $_GET["id"];
 	$sj_idx = $_GET["sj_idx"];
 	if ($sj_idx == '') $sj_idx = 0;
-	$url = 'http://www.tfreeca22.com/board.php?mode=view&b_id='.$b_id.'&id='.$id;
+	$url = $SITE.'/board.php?mode=view&b_id='.$b_id.'&id='.$id;
 	$headers[] = 'Cookie: uuoobe=on;';
 	$data2 = get_html($url, $headers);
 	$attachs = explode("http://www.filetender.com", $data2);
@@ -230,70 +243,3 @@ function endsWith($haystack, $needle)
 }
 ?>
 ````
-
-
-
-## 활용 - KLive App
-[다운로드](https://github.com/soju6jan/KLive/blob/master/android_tv/klive_0.1.0.apk)
-
-- 앱을 설치 후 실행
-![2018-10-18 20;20;28](https://i.imgur.com/xo4r73D.png)
-
----
-
-- 앱 실행화면
-![2018-10-18 20;20;16](https://i.imgur.com/dTQB7O4.png)
-
----
-
-- server 주소 입력. 추가 주소 입력 후 우측 switch on. Save... 버튼 클릭하여 Live Channels 실행
-![2018-10-18 20;02;13](https://i.imgur.com/l7hJc0l.png)
-
----
-
-- Live Channels 화면. KLive 선택하여 스캔
-![2018-10-18 20;21;03](https://i.imgur.com/pdSGqVN.png)
-
----
-
-- 스캔중
-![2018-10-18 20;21;40](https://i.imgur.com/qTjCbkQ.png)
-
----
-
-- 스캔완료
-![2018-10-18 20;21;46](https://i.imgur.com/k90pwcX.png)
-
----
-
-- 재생화면
-![2018-10-18 20;21;53](https://i.imgur.com/27KOKnP.jpg)
-
----
-
-- 편성표
-![2018-10-18 20;22;04](https://i.imgur.com/5PHaKpb.png)
-
----
-
-- 각 소스별 JTBC
-![2018-10-18 20;22;24](https://i.imgur.com/b3hrMda.png)
-
----
-
-- custom 파일에서 설정한 채널이름. JTBC(티빙)
-![2018-10-18 20;22;29](https://i.imgur.com/tW70hCV.jpg)
-
----
-
-![2018-10-18 20;22;46](https://i.imgur.com/WgYHrn4.png)
-
----
-
-- 스캔 후 채널이 나오지 않을 때 채널 선택 화면에 체크 해제되어 있는지 확인
-![2018-10-18 20;23;12](https://i.imgur.com/HC9MAn0.png)
-
----
-
-- 이상증상 발생시 Klive, LiveChannels 앱 설정에서 캐쉬 삭제
-![2018-10-18 20;23;54](https://i.imgur.com/lWczjlJ.png)
