--- a/_posts/2018-10-18-티프리카용 RSS.md
+++ b/_posts/2018-10-18-티프리카용 RSS.md
@@ -7,7 +7,8 @@ categories: rss
 ## 티프리카용 RSS 피드 생성 - php 버전
 고기상자님 코드를 바탕으로 자막 파일만 받는 것만 했었다.
 영화만 이 파일로 받고, 영화 이외에는 다른 분들이 업데이트해주시는 것으로 사용했으나 사이트가 자꾸 변경되어 여러 개를 같이 고쳐야 하기에 이 파일로 티프리카 모두 적용하는 것으로 변경한다.
-다운로드 : https://soju6jan.github.io/etc/sj_tf.php
+
+[다운로드](https://soju6jan.github.io/etc/sj_tf.php)
 
 ## 사용법
 ### 1. 단일파일
