--- a/_posts/2018-10-18-티프리카용 RSS.md
+++ b/_posts/2018-10-18-티프리카용 RSS.md
@@ -80,45 +80,37 @@ $m = $_GET["sj_mode"];
 if ( $m == 'd' ) {
 	download();
 } else {
-	$query = '';
-	foreach($_GET as $key => $value){
-		if (startsWith($key, 'sj_') == false) {
-			$query = $query.'&'.$key.'='.$value;
-		}
-	}
 	global $SITE;
+	$query = '';
+	foreach($_GET as $key => $value) if (startsWith($key, 'sj_') == false) $query = $query.'&'.$key.'='.$value;
 	$url = $SITE.'/board.php?mode=list'.$query;
 	$xml = make_rss($url);
-	$txt=str_replace("&","&amp;",$xml);
-	echo $txt;
+	echo str_replace("&","&amp;",$xml);
 }
 
 function make_rss($url){
 	global $SITE;
-	header("Content-Type: text/html");
+	header("Content-Type: application/xml");
 	$ret = "<rss xmlns:showrss=\"http://showrss.info/\" version=\"2.0\"><channel><title></title><link></link><description></description>";
-	$headers = array();
-	$headers[] = 'Cookie: uuoobe=on;';
+	$headers = array('Cookie: uuoobe=on;');
 	$sj_page = $_GET["sj_page"];
 	if ($sj_page == '') $sj_page = 1;
 	$sj_all_max = $_GET["sj_all_max"];
-	if ($sj_all_max == '') $sj_all_max = -1;
+	if ($sj_all_max == '') $sj_all_max = 20;
 	for($page = 1 ; $page <= $sj_page ; $page++) {
 		$data = get_html($url, $headers);
 		$data = str_replace("</span>","",str_replace("<span class='sc_font'>","",str_replace("stitle1","stitle",str_replace("stitle2","stitle",str_replace("stitle3","stitle",str_replace("stitle4","stitle",str_replace("stitle5","stitle",str_replace("<tr class=\"bgcolor\">","<tr >",$data))))))));
 		$data = explode("<tr >", $data);
 		$count = 0;
 		for($i = 1; $i < count($data); $i++){
-			if ( strpos($data[$i], 'stitle') )
-				$title = explode(" <",explode("class=\"stitle\"> ",$data[$i])[1])[0];
-			else
-				$title = explode(" <",explode("class=\"\"> ",$data[$i])[1])[0];
+			if ( $_GET["sj_except_no_sub"] == 'on' && strpos($data[$i], '무자막')) continue;
+			if ( strpos($data[$i], 'stitle') ) $title = explode(" <",explode("class=\"stitle\"> ",$data[$i])[1])[0];
+			else $title = explode(" <",explode("class=\"\"> ",$data[$i])[1])[0]; 
 			$view = explode("\"",explode("<a href=\"board.php?mode=view&",$data[$i])[1])[0];
 			if ( $_GET["sj_all"] == 'on') {
 				$url = $SITE.'/board.php?mode=view&'.$view;
 				$data2 = get_html($url, $headers);
 				$attachs = explode("http://www.filetender.com", $data2);
-
 				if ( $_GET['sj_all_movie_only_1080p'] == 'on') {
 					// TODO 이쁘게
 					$flag_1080p = false;
@@ -140,7 +132,7 @@ function make_rss($url){
 					}
 				}
 				$count++;
-				if ($sj_all_max !=-1 && $count > $sj_all_max) break;
+				if ($sj_all_max != -1 && $count > $sj_all_max) break;
 			} else if ( $_GET["sj_all"] == 'dummy') {
 				for($idx = 0 ; $idx < 4 ; $idx++) {
 					$ret = $ret."<item><title>".$title."</title><link>http://".$_SERVER['HTTP_HOST'].$_SERVER['PHP_SELF']."?" . $view . "&sj_mode=d&sj_idx=".$idx."</link><description></description><showrss:showid></showrss:showid><showrss:showname>".$title."</showrss:showname></item>";
@@ -150,7 +142,7 @@ function make_rss($url){
 				$ret = $ret."<item><title>".$title."</title><link>http://".$_SERVER['HTTP_HOST'].$_SERVER['PHP_SELF']."?" . $view . "&sj_mode=d"."</link><description></description><showrss:showid></showrss:showid><showrss:showname>".$title."</showrss:showname></item>";
 			}
 		}
-		if ($sj_all_max !=-1 && $count > $sj_all_max) break;
+		if ($sj_all_max != -1 && $count > $sj_all_max) break;
 	}
 	$ret = $ret."</channel></rss>";
 	return $ret;
@@ -209,8 +201,7 @@ function get_torrent() {
 		$l = explode("\"",$attachs[$x])[0];
 		if ( $filename != '' ) {
 			$idx++;
-			if ($idx == $sj_idx)
-				return array($filename, $l);
+			if ($idx == $sj_idx) return array($filename, $l);
 		}
 	}
 	return null;
