--- a/_posts/2018-10-18-티프리카용 RSS.md
+++ b/_posts/2018-10-18-티프리카용 RSS.md
@@ -51,6 +51,10 @@ categories: rss
 	예) sj_all_max=20 일 경우 최근 게시물중 20개만 리턴
 	갱신이 안 되는 것 같을 때 이 값을 변경.
 
+	- sj_except_no_sub : on / off  생략시 off
+
+	on일경우 무자막으로 나와있는 게시물은 받지 않는다
+
 * sj_all=dummy
 	- 위의 경우 갱신 시 타임아웃 걸릴 가능성도 있고, 한꺼번에 게시물이 올라올 경우 놓칠 수도 있다.
 	이를 피하기 위해 목록을 넘길 때는 dummy로 한 게시물당 4개씩 고정적으로 넘긴다. 다운로드 시에는 각 인덱스별로 파일을 받게된다.
