--- a/_posts/2018-10-18-티프리카용 RSS.md
+++ b/_posts/2018-10-18-티프리카용 RSS.md
@@ -109,7 +109,7 @@ function make_rss($url){
 		for($i = 1; $i < count($data); $i++){
 			if ( $_GET["sj_except_no_sub"] == 'on' && strpos($data[$i], '무자막')) continue;
 			if ( strpos($data[$i], 'stitle') ) $title = explode(" <",explode("class=\"stitle\"> ",$data[$i])[1])[0];
-			else $title = explode(" <",explode("class=\"\"> ",$data[$i])[1])[0]; 
+			else $title = explode(" <",explode("class=\"\"> ",$data[$i])[1])[0];
 			$view = explode("\"",explode("<a href=\"board.php?mode=view&",$data[$i])[1])[0];
 			if ( $_GET["sj_all"] == 'on') {
 				$url = $SITE.'/board.php?mode=view&'.$view;
@@ -165,11 +165,8 @@ function download() {
 		$sj_filename = $_GET["sj_filename"];
 		$sj_filetender= $_GET["sj_filetender"];
 	}
-	header("Connection: keep-alive");
-	header("pragma: no-cache");
-	header("expires: 0");
 	header("Content-Disposition: attachment; filename=\"".$sj_filename."\"");
-	header("content-description: php generated data");
+  header("Content-Type: application/octet-stream");
 	$url = $SITE.'/board.php?mode=view&b_id=' . $b_id . '&id=' . $id;
 	$url2 = "http://www.filetender.com".$sj_filetender;
 	$headers = array(
